#-
# Copyright (C) 2011  Oy L M Ericsson Ab, NomadicLab
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation.
#
# Alternatively, this software may be distributed under the terms of the
# BSD license.
#
# See LICENSE and COPYING for more details.
#

SUBDIRS = 

if SWIG_PYTHON
    SUBDIRS += python
endif

if SWIG_RUBY
    SUBDIRS += ruby
endif

if SWIG_JAVA
    SUBDIRS += java
endif
